chore(forum): sync local changes
